[gd_scene load_steps=17 format=3 uid="uid://yw1lin4fvk5y"]

[ext_resource type="Script" path="res://introduction_scene.gd" id="1_eq1g5"]
[ext_resource type="PackedScene" uid="uid://c6qtog1mylxx4" path="res://destroyer.tscn" id="2_lmthf"]
[ext_resource type="PackedScene" uid="uid://dmnlfrki2n0hu" path="res://ship2.tscn" id="3_mg8e5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ymkqd"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0.5, 0.5, 0.5, 1)
sky_energy_multiplier = 0.0
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="Sky" id="Sky_y41tv"]
sky_material = SubResource("ProceduralSkyMaterial_ymkqd")

[sub_resource type="Environment" id="Environment_qb2fs"]
background_mode = 2
background_energy_multiplier = 0.0
sky = SubResource("Sky_y41tv")
ambient_light_energy = 0.78
tonemap_mode = 2
tonemap_white = 16.0
glow_enabled = true

[sub_resource type="Animation" id="Animation_puh87"]
resource_name = "camera_movment_1"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.998291, -3.06422, 0.065076), Vector3(-0.356663, -3.09689, -0.0156172)]
}

[sub_resource type="Animation" id="Animation_b7jo6"]
resource_name = "destroyer_movment"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10, 15, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(17.1572, 311.203, -943.655), Vector3(17.1572, 376.136, -913.878), Vector3(17.1572, 410.008, -895.925), Vector3(17.1572, 442.292, -879.145), Vector3(17.1572, 485.288, -853.416)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_teutj"]
_data = {
"camera_movment_1": SubResource("Animation_puh87"),
"destroyer_movment": SubResource("Animation_b7jo6")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nwao"]
albedo_color = Color(0.658824, 0.321569, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_gnqgw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j1327"]

[sub_resource type="Animation" id="Animation_8uobq"]
resource_name = "ship_1_movment"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ship_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(6.96414, 418.159, -874.676), Vector3(-10.6401, 418.159, -874.676)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ship_1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bffhx"]
_data = {
"ship_1_movment": SubResource("Animation_8uobq")
}

[sub_resource type="Animation" id="Animation_b65jf"]
resource_name = "ship_2_movment"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ship_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(11.4936, 425.864, -870.352), Vector3(-8.85428, 425.864, -870.352)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vewxn"]
_data = {
"ship_2_movment": SubResource("Animation_b65jf")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_eq1g5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qb2fs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera3D")
libraries = {
"": SubResource("AnimationLibrary_teutj")
}

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.999123, 2.57045e-06, -0.041874, 0.0352294, 0.540593, -0.840546, 0.0226347, -0.841284, -0.540119, 1.19364, 511.501, -957.186)

[node name="Stars" type="Node3D" parent="."]
transform = Transform3D(1, -3.72529e-09, 3.72529e-09, 3.72529e-09, 1, 5.96046e-08, 0, -2.98023e-08, 1, 3.57628e-06, 3.05176e-05, 6.10352e-05)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(100, 3.72529e-07, -3.72529e-07, -3.72529e-07, 100, -5.96046e-06, -1.11022e-14, 2.98023e-06, 100, 9.70382e-07, 438.219, -782.266)
material_override = SubResource("StandardMaterial3D_5nwao")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(-0.866023, -0.433017, 0.250001, -0.364243, 0.888891, 0.277849, -0.342537, 0.149563, -0.927523, 15.1267, 542.329, -1216.65)
light_color = Color(0.419608, 0.419608, 0.419608, 1)
light_energy = 3.472
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, 830.418, 1304.76, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, 865.441, 1479.13, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, 482.071, 938.176, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, 517.095, 1112.55, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, -318.057, 646.786, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D6" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, -283.034, 821.163, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, -889.924, 1055.47, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D7" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, -854.9, 1229.85, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, 787.574, 1498.03, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D4" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, 822.598, 1672.41, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Stars"]
transform = Transform3D(4.3451, 0.681936, -2.37804, -2.88911e-07, -4.80628, -1.37827, -2.47388, 1.19775, -4.17676, 1082.56, 1089.34, -127.933)
material_override = SubResource("StandardMaterial3D_j1327")
mesh = SubResource("SphereMesh_gnqgw")
skeleton = NodePath("")

[node name="DirectionalLight3D5" type="DirectionalLight3D" parent="Stars"]
transform = Transform3D(0.482728, 0.842614, -0.238693, -0.199232, -0.159746, -0.966844, -0.852807, 0.514278, 0.0907619, 1117.58, 1263.72, -338.882)
light_energy = 16.0
light_indirect_energy = 9.286
shadow_enabled = true
directional_shadow_pancake_size = 177.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Node3D" parent="." instance=ExtResource("2_lmthf")]
transform = Transform3D(-11.8353, -0.00162847, -0.281525, -0.270553, -0.0788313, 7.18729, -0.315437, 0.128715, 4.39828, 17.1572, 311.203, -943.655)

[node name="Ship_1" parent="." instance=ExtResource("3_mg8e5")]
transform = Transform3D(0.460777, -0.550021, -0.696535, 0.887428, 0.274467, 0.370324, -0.0125099, -0.788762, 0.614572, 6.96414, 418.159, -874.676)
visible = false

[node name="Ship_2" parent="." instance=ExtResource("3_mg8e5")]
transform = Transform3D(0.460769, -0.550558, -0.696117, 0.887428, 0.274467, 0.370324, -0.0128236, -0.788387, 0.615046, 11.4936, 425.864, -870.352)
visible = false

[node name="Animation_Ship_1" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bffhx")
}

[node name="Animation_Ship_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vewxn")
}

[node name="Timer4" type="Timer" parent="."]
wait_time = 22.0
autostart = true

[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
